--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ytdl-core",
+  "name": "ytdl-core-as",
   "description": "YouTube video downloader in pure javascript.",
   "keywords": [
     "youtube",
